REGRESSION(r56552): Broken scrollbars size https://bugs.webkit.org/show_bug.cgi?id=36853

Reviewed by Kenneth Christiansen and Tor Arne Vestbø.
Patch by Antonio Gomes <tonikitoo@webkit.org>

The regression was caused by r56552, which introduced a fix to bug
webkit.org/b/21300. The bug solved an issue with the resize handle on mac,
but did it in a way that affected all Qt platforms and thus broke the behavior
on non-mac platforms.

This patch makes the mac specific change ifdef'ed and only applied for the mac
platform.

* WebCoreSupport/ChromeClientQt.cpp:
(WebCore::ChromeClientQt::windowResizerRect):

Canonical link: https://commits.webkit.org/48943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57656 268f45cc-cd09-0410-ab3c-d52691b4dbfc